tests/baselines/reference/heterogeneousArrayAndOverloads.errors.txt
heterogeneousArrayAndOverloads.ts(9,26): error TS2769: No overload matches this call.
  Overload 1 of 2, '(arg1: number[]): any', gave the following error.
    Type 'string' is not assignable to type 'number'.


==== heterogeneousArrayAndOverloads.ts (1 errors) ====
    class arrTest {
        test(arg1: number[]);
        test(arg1: string[]);
        test(arg1: any[]) { }
        callTest() {
            this.test([1, 2, 3, 5]);
            this.test(["hi"]);
            this.test([]);
            this.test([1, 2, "hi", 5]); // Error
                             ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(arg1: number[]): any', gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'number'.
!!! related TS2793 heterogeneousArrayAndOverloads.ts:4:5: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
        }
    }